# food_lens

./: .gitignore  .pdm-python  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  deploy_stage.yml  main.yml
food_lens/: __main__.py  app.py  bot.py  routes.py  settings.py  uvicorn.py
food_lens/bot_routers/: main_router.py
food_lens/repositories/: tables.py
food_lens/utils/: decoders.py  logger.py
tests/: conftest.py  test_mock.py  test_routes.py
